--- a/stylesheets/less/archive.less
+++ b/stylesheets/less/archive.less
@@ -9,20 +9,11 @@
 			h2 {
 				margin-top:0;
 				color:@color_midtone;
+				.font-size-small;
+				font-family:@serif;
+				font-style:italic;
 			}
 		}
-		article {
-			header {
-				h1 {
-					font-size:22px;
-				}
-			}
-		}
-		.post {
-			margin-bottom:@row-height*4;
-		}
-		.post:last-child {
-			margin-bottom:@row-height;
-		}
+		
 	}
 }
