--- a/stylesheets/less/comments.less
+++ b/stylesheets/less/comments.less
@@ -3,9 +3,7 @@
 @media screen, projection {
 	#comments_container
 	{
-		border-top:@border-break;
-		margin-top:(@row-height);
-		padding-top:@row-height;	
+		margin-top:(@row-height)*4;	
 		#comments_ajax	{
 			overflow:hidden;
 			height:0;
@@ -16,23 +14,22 @@
 			}
 			h2 {
 				margin-top:0;
+				font-family:@serif;
 			}
 		}
 	
 		#comments {
+			list-style:none;
+			.comment-info {
+				text-align:right;
+			}
 			.reset-dimensions;
 			margin-bottom:(@row-height);
-			.metadata {
-				margin-bottom:5px;
-				font-size:11px;
-				margin-top:(@row-height);
-			}
 			.copy {
-				margin-top:2px;
 				font-family:@serif;
 				p {
-					font-size: 13px;
-					line-height:@row-height;
+					.font-size-medium;
+					color:@color_dark;
 				}
 			
 				p:first-child {
@@ -40,26 +37,17 @@
 				}
 			
 				blockquote, blockquote p {
-					font-size:13px;
+					.font-size-small;
 				}
 			}
 			li {
 				.reset-dimensions;
 				margin-bottom:(@row-height);
-			}
-			.metadata {
-				small {
-					font-size: 11px;
-					padding-top: 5px;
-					margin-bottom: 0;
-				}
-			}
-			li {
 				background: none;
 				margin: 0;
 				padding: @row-height*2 0;
-				border-bottom: 1px solid @color_light;
 			}
+			
 			li:first-child {
 				margin-top: 0px;
 			}
@@ -95,7 +83,7 @@
 					.reset-dimensions;
 					input.textinput {
 						margin: 0;
-						font-size: 12px !important;
+						font-size: 11px !important;
 						padding: 2px;
 						height: (@row-height);
 						width: 184px;
@@ -105,7 +93,7 @@
 			textarea {
 				border: 1px solid #000;
 				margin: 0;
-				font-size: 12px !important;
+				font-size: 11px !important;
 				height: 127px;
 				padding: 2px 4px;
 				width: 530px;
@@ -120,11 +108,11 @@
 			header {
 				margin-bottom: @row-height;
 				h1 {
-					font-size:18px;
+					font-size:@medium;
 				}
 
 				p.loggedin {
-					font-size: 12px !important;
+					font-size: 11px !important;
 				}
 			}
 		}
