--- a/stylesheets/less/fourohfour.less
+++ b/stylesheets/less/fourohfour.less
@@ -10,12 +10,12 @@
 		.container  {
 			p.default-message {
 				font-family:@serif;
-				font-size:19px;
+				font-size:@medium;
 				line-height:30px;
 			}
 			#s {
 				.columns(5);
-				font-size:14px;
+				.font-size-small;
 			}
 		}
 	
