--- a/stylesheets/css/archive.css
+++ b/stylesheets/css/archive.css
@@ -1,4 +1,11 @@
+.font-size-xx-large{font-size:28px;line-height:35px;}
+.font-size-x-large{font-size:24px;line-height:32px;}
+.font-size-large{font-size:20px;line-height:30px;}
+.font-size-medium{font-size:17px;line-height:27px;}
+.font-size-small{font-size:13px;line-height:19px;}
+.font-size-x-small{font-size:11px;line-height:14px;}
+.font-size-xx-small{font-size:10px;line-height:12px;}
 .reset-dimensions{margin:0;padding:0;}
 .incomplete{background-color:rgba(255, 0, 255, 0);}
 .show-bounds{background-color:rgba(255, 255, 0, 0.5);}
-@media screen, projection{#content.archive header{margin-bottom:30px;}#content.archive header h1{margin-bottom:0;} #content.archive header h2{margin-top:0;color:#5d504f;} #content.archive article header h1{font-size:22px;} #content.archive .post{margin-bottom:60px;} #content.archive .post:last-child{margin-bottom:15px;}}
+@media screen, projection{#content.archive header{margin-bottom:30px;}#content.archive header h1{margin-bottom:0;} #content.archive header h2{margin-top:0;color:#5d504f;font-size:13px;line-height:19px;font-family:Georgia,"Times New Roman",Times,serif;font-style:italic;}}
