--- a/stylesheets/css/forms.css
+++ b/stylesheets/css/forms.css
@@ -1,4 +1,11 @@
+.font-size-xx-large{font-size:28px;line-height:35px;}
+.font-size-x-large{font-size:24px;line-height:32px;}
+.font-size-large{font-size:20px;line-height:30px;}
+.font-size-medium{font-size:17px;line-height:27px;}
+.font-size-small{font-size:13px;line-height:19px;}
+.font-size-x-small{font-size:11px;line-height:14px;}
+.font-size-xx-small{font-size:10px;line-height:12px;}
 .reset-dimensions{margin:0;padding:0;}
 .incomplete{background-color:rgba(255, 0, 255, 0);}
 .show-bounds{background-color:rgba(255, 255, 0, 0.5);}
-@media screen, projection{input[type=text],textarea{font-size:12px;border:1px solid #5d504f;font-family:'Helvetica Neue',Helvetica,Arial,sans-serif;color:#5d504f;} input[type=submit]{font-size:12px;background:none;border:0;padding:6px 10px 6px 10px;cursor:pointer;}}
+@media screen, projection{input[type=text],textarea{font-size:11px;border:1px solid #5d504f;font-family:'Helvetica Neue',Helvetica,Arial,sans-serif;color:#5d504f;} input[type=submit]{font-size:11px;background:none;border:0;padding:6px 10px 6px 10px;cursor:pointer;}}
