--- a/stylesheets/css/grid.css
+++ b/stylesheets/css/grid.css
@@ -1,49 +1,50 @@
+.font-size-xx-large{font-size:28px;line-height:35px;}
+.font-size-x-large{font-size:24px;line-height:32px;}
+.font-size-large{font-size:20px;line-height:30px;}
+.font-size-medium{font-size:17px;line-height:27px;}
+.font-size-small{font-size:13px;line-height:19px;}
+.font-size-x-small{font-size:11px;line-height:14px;}
+.font-size-xx-small{font-size:10px;line-height:12px;}
 .reset-dimensions{margin:0;padding:0;}
 .incomplete{background-color:rgba(255, 0, 255, 0);}
 .show-bounds{background-color:rgba(255, 255, 0, 0.5);}
-.wrapper{width:960px;position:relative;margin:0 auto !important;display:block;}
+.wrapper{width:980px;position:relative;margin:0 auto !important;display:block;}
 .wrapper.showgrid{background-image:url(../images/grid_14col.png);}
-div.span-1,div.span-2,div.span-3,div.span-4,div.span-5,div.span-6,div.span-7,div.span-8,div.span-9,div.span-10,div.span-11,div.span-12,div.span-13,div.span-14{float:left;margin-right:20px;}
+div.span-1,div.span-2,div.span-3,div.span-4,div.span-5,div.span-6,div.span-7,div.span-8,div.span-9,div.span-10,div.span-11,div.span-12{float:left;margin-right:40px;}
 div.last{margin-right:0;}
-section.span-1,section.span-2,section.span-3,section.span-4,section.span-5,section.span-6,section.span-7,section.span-8,section.span-9,section.span-10,section.span-11,section.span-12,section.span-13,section.span-14{float:left;margin-right:20px;}
+section.span-1,section.span-2,section.span-3,section.span-4,section.span-5,section.span-6,section.span-7,section.span-8,section.span-9,section.span-10,section.span-11,section.span-12{float:left;margin-right:40px;}
 section.last{margin-right:0;}
-.span-1{width:50px;}
-.span-2{width:120px;}
-.span-3{width:190px;}
-.span-4{width:260px;}
-.span-5{width:330px;}
-.span-6{width:400px;}
-.span-7{width:470px;}
-.span-8{width:540px;}
-.span-9{width:610px;}
-.span-10{width:680px;}
-.span-11{width:750px;}
-.span-12{width:820px;}
-.span-13{width:890px;}
-.span-14{width:960px;}
-.suffix-1{padding-right:70px;}
-.suffix-2{padding-right:140px;}
-.suffix-3{padding-right:210px;}
-.suffix-4{padding-right:280px;}
-.suffix-5{padding-right:350px;}
-.suffix-6{padding-right:420px;}
-.suffix-7{padding-right:490px;}
-.suffix-8{padding-right:560px;}
-.suffix-9{padding-right:630px;}
-.suffix-10{padding-right:700px;}
-.suffix-11{padding-right:770px;}
-.suffix-12{padding-right:840px;}
-.suffix-13{padding-right:910px;}
-.prefix-1{padding-left:70px;}
-.prefix-2{padding-left:140px;}
-.prefix-3{padding-left:210px;}
-.prefix-4{padding-left:280px;}
-.prefix-5{padding-left:350px;}
-.prefix-6{padding-left:420px;}
-.prefix-7{padding-left:490px;}
-.prefix-8{padding-left:560px;}
-.prefix-9{padding-left:630px;}
-.prefix-10{padding-left:700px;}
-.prefix-11{padding-left:770px;}
-.prefix-12{padding-left:840px;}
-.prefix-13{padding-left:910px;}
+.span-1{width:45px;}
+.span-2{width:130px;}
+.span-3{width:215px;}
+.span-4{width:300px;}
+.span-5{width:385px;}
+.span-6{width:470px;}
+.span-7{width:555px;}
+.span-8{width:640px;}
+.span-9{width:725px;}
+.span-10{width:810px;}
+.span-11{width:895px;}
+.span-12{width:980px;}
+.suffix-1{padding-right:85px;}
+.suffix-2{padding-right:170px;}
+.suffix-3{padding-right:255px;}
+.suffix-4{padding-right:340px;}
+.suffix-5{padding-right:425px;}
+.suffix-6{padding-right:510px;}
+.suffix-7{padding-right:595px;}
+.suffix-8{padding-right:680px;}
+.suffix-9{padding-right:765px;}
+.suffix-10{padding-right:850px;}
+.suffix-11{padding-right:935px;}
+.prefix-1{padding-left:85px;}
+.prefix-2{padding-left:170px;}
+.prefix-3{padding-left:255px;}
+.prefix-4{padding-left:340px;}
+.prefix-5{padding-left:425px;}
+.prefix-6{padding-left:510px;}
+.prefix-7{padding-left:595px;}
+.prefix-8{padding-left:680px;}
+.prefix-9{padding-left:765px;}
+.prefix-10{padding-left:850px;}
+.prefix-11{padding-left:935px;}
