--- a/stylesheets/css/ie.css
+++ b/stylesheets/css/ie.css
@@ -1,3 +1,10 @@
+.font-size-xx-large{font-size:28px;line-height:35px;}
+.font-size-x-large{font-size:24px;line-height:32px;}
+.font-size-large{font-size:20px;line-height:30px;}
+.font-size-medium{font-size:17px;line-height:27px;}
+.font-size-small{font-size:13px;line-height:19px;}
+.font-size-x-small{font-size:11px;line-height:14px;}
+.font-size-xx-small{font-size:10px;line-height:12px;}
 .reset-dimensions{margin:0;padding:0;}
 .incomplete{background-color:rgba(255, 0, 255, 0);}
 .show-bounds{background-color:rgba(255, 255, 0, 0.5);}
@@ -10,7 +17,7 @@
 #sub_header .item-3,#sub_header .item-7,#sub_header .item-11{margin-right:0;}
 #post_footer .item-0,#post_footer .item-4,#post_footer .item-8{clear:left;width:330px;}
 #post_footer .item-3,#post_footer .item-7,#post_footer .item-11{margin-right:0;}
-#sidebar{background:#fefafa;}
+#sidebar{background:#fdfcfc;}
 #sticky_footer{background:#3d302f;}
 #sticky_footer.light{background:#f0eceb;}
 .clear:after{content:".";display:block;clear:both;visibility:hidden;line-height:0;height:0;}
