--- a/stylesheets/css/sidebar.css
+++ b/stylesheets/css/sidebar.css
@@ -1,4 +1,11 @@
+.font-size-xx-large{font-size:28px;line-height:35px;}
+.font-size-x-large{font-size:24px;line-height:32px;}
+.font-size-large{font-size:20px;line-height:30px;}
+.font-size-medium{font-size:17px;line-height:27px;}
+.font-size-small{font-size:13px;line-height:19px;}
+.font-size-x-small{font-size:11px;line-height:14px;}
+.font-size-xx-small{font-size:10px;line-height:12px;}
 .reset-dimensions{margin:0;padding:0;}
 .incomplete{background-color:rgba(255, 0, 255, 0);}
 .show-bounds{background-color:rgba(255, 255, 0, 0.5);}
-@media screen, projection{#sidebar{opacity:0.5;background:rgba(254, 250, 250, 0);position:absolute;right:0px;top:0px;overflow:hidden;height:auto;border-left:1px solid #fefafa;border-right:0;z-index:100;}#sidebar .container{position:relative;left:0;float:right;} #sidebar h3{font-weight:bold;font-size:13px;margin-bottom:5px;} #sidebar h3:first-child{margin-top:0 !important;} #sidebar .container{padding-top:15px;} #sidebar:hover{opacity:1;width:400px;padding-left:20px;height:100%;background:rgba(254, 250, 250, 0.94);border-left:1px solid #5d504f;} #faux_sidebar{width:190px;overflow:hidden;visibility:hidden;float:left;}#faux_sidebar h3{font-weight:bold;font-size:13px;margin-bottom:5px;} #faux_sidebar h3:first-child{margin-top:0 !important;} #faux_sidebar .container{padding-top:15px;}}
+@media screen, projection{#sidebar{opacity:0.5;width:215px;float:left;}#sidebar h3{font-weight:bold;font-size:13px;line-height:19px;margin-bottom:5px;} #sidebar h3:first-child{margin-top:0 !important;} #sidebar .container{padding-top:15px;} #sidebar:hover{opacity:1;}}
