--- a/stylesheets/css/single.css
+++ b/stylesheets/css/single.css
@@ -1,4 +1,11 @@
+.font-size-xx-large{font-size:28px;line-height:35px;}
+.font-size-x-large{font-size:24px;line-height:32px;}
+.font-size-large{font-size:20px;line-height:30px;}
+.font-size-medium{font-size:17px;line-height:27px;}
+.font-size-small{font-size:13px;line-height:19px;}
+.font-size-x-small{font-size:11px;line-height:14px;}
+.font-size-xx-small{font-size:10px;line-height:12px;}
 .reset-dimensions{margin:0;padding:0;}
 .incomplete{background-color:rgba(255, 0, 255, 0);}
 .show-bounds{background-color:rgba(255, 255, 0, 0.5);}
-@media screen, projection{#content.single{position:relative;margin-top:15px;}#content.single article header{margin-bottom:30px;} #content.single #content_primary #excerpt{padding-bottom:30px;border-bottom:1px solid rgba(93, 80, 79, 0.45);}#content.single #content_primary #excerpt p{padding-top:0;font-size:24px;line-height:30px;font-style:italic;} #content.single #content_primary footer{margin:0;padding:0;margin-top:30px;}#content.single #content_primary footer p{font-size:14px !important;} #content.single #content_primary #content_main{padding-top:30px;border-top:1px solid rgba(93, 80, 79, 0.1);} #content.single #post_footer .widget{float:left;margin-right:20px;width:190px;margin-bottom:20px;} #content.single #post_footer .widget:nth-child(3n+1){width:330px;clear:left;} #content.single #post_footer .widget:nth-child(3n){margin-right:0;}}
+@media screen, projection{#content.single{position:relative;margin-top:15px;}#content.single aside{margin-top:60px;} #content.single article header{margin-bottom:15px;}#content.single article header h1{font-weight:normal;font-size:20px;line-height:30px;color:#3d302f;} #content.single #content_primary #excerpt{padding-bottom:30px;color:#5d504f;}#content.single #content_primary #excerpt p{padding-top:0;font-size:28px;line-height:35px;font-family:Georgia,"Times New Roman",Times,serif;font-style:italic;} #content.single #content_primary footer{margin:0;padding:0;margin-top:30px;}#content.single #content_primary footer p{font-size:14px !important;} #content.single #content_primary #content_main{margin-top:30px;} #content.single #post_footer .widget{float:left;margin-right:40px;width:215px;margin-bottom:20px;} #content.single #post_footer .widget:nth-child(3n){margin-right:0;}}
