--- a/stylesheets/less/footer.less
+++ b/stylesheets/less/footer.less
@@ -9,19 +9,15 @@
 		a { color: @color_highlight; }
 		h3 { 
 			font-weight:bold;
-			font-size:13px;
+			.font-size-small;
 			margin-bottom:5px;
-			line-height:@row-height;
 			color: @color_light;
 			font-family:@sans-serif;
 		}
-		.recent_comments dd {
-			font-size: 11px; 
-		}
 		.widget {
 			float:left;
-			margin-right:20px;
-			width:190px;
+			margin-right:40px;
+			.columns(3);
 			margin-bottom:(@row-height*3);
 			font-family:@serif;
 			p {
@@ -29,12 +25,12 @@
 			}
 		}
 
-		.widget:nth-child(4n+1) {
-			width:330px;
+		.widget:nth-child(3n+1) {
+			.columns(6);
 			clear:left;
 		}
 
-		.widget:nth-child(4n) {
+		.widget:nth-child(3n) {
 			margin-right:0;
 		}
 	}
@@ -42,7 +38,7 @@
 	#page_heel {
 		padding:(@row-height) 0;
 		color:@color_highlight;
-		p, ul, li, a { font-size:10px; }
+		p, ul, li, a { font-size:@x-small; }
 		a {
 			color:@color_highlight;
 		}
@@ -54,7 +50,7 @@
 			color:@color_light;
 			h3 {
 				.reset-dimensions;
-				font-size:12px;
+				font-size:@x-small;
 				font-weight:bold;
 				line-height:@row-height;
 				margin-top:5px;
@@ -73,57 +69,4 @@
 			margin-right:0;
 		}
 	} 
-
-	/* @group Sticky Footer */
-
-	#sticky_footer {
-		.drop-shadow(0px, 5px, 20px, @color_off_black);
-		width: 100%;
-		background-color: rgba(42,32,30,.85);
-		position: fixed;
-		overflow: hidden;
-		bottom: 0;
-		z-index: 99999;
-		padding:0;
-		.widget {
-			padding:5px 0;
-			float:left;
-			margin-right:20px;
-			width:190px;
-			margin-bottom:(@row-height*2);
-			color:@color_light;
-			a {
-				color:@color_light;
-			}
-			h3 {
-				.reset-dimensions;
-				font-size:12px;
-				font-weight:bold;
-				line-height:@row-height;
-				margin-top:5px;
-			}
-			p {
-				.reset-dimensions;
-				margin:5px 0;
-				font-size:11px;
-			}
-		
-		}
-	
-		.widget:nth-child(4n) {
-			margin-right:0;
-		}
-	}
-
-	#sticky_footer.light {
-		background-color: rgba(254,250,250,.75);
-		.widget {
-			color:@color_off_black;
-			a {
-				color:@color_midtone;
-			}
-		}
-	}
-
-	/* @end */
 }
