--- a/stylesheets/less/forms.less
+++ b/stylesheets/less/forms.less
@@ -1,14 +1,14 @@
 @import "variables";
 @media screen, projection {
 	input[type=text], textarea {
-		font-size: 12px;
+		font-size:@x-small;
 		border: 1px solid @color_midtone;
 		font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif;
 		color: @color_midtone;
 	}
 
 	input[type=submit] {
-		font-size:12px;
+		font-size:@x-small;
 		background:none;
 		border:0;
 		padding:6px 10px 6px 10px;
