--- a/stylesheets/less/index.less
+++ b/stylesheets/less/index.less
@@ -3,24 +3,18 @@
 @media screen, projection {
 	#content.home {	
 		.content-header {
-			.label, .caption {
-				display:block;
-			}
+			.font-size-x-small;
 			.label {
-				font-size:15px;
-				margin:10px 0 9px 0;
+				
 			}
 			.caption {
-				font-size:11px;
-				line-height:@row-height;
 				font-style:italic;
 				.reset-dimensions;
 				font-family:@serif;
 			}
 			.more {
-				display:block;
-				margin-top:@row-height;
-				font-weight:@bold;
+				.reset-dimensions;
+				font-family:@serif;				
 			}
 		}
 	
@@ -31,7 +25,7 @@
 				.read-more {
 					margin-top:@row-height;
 					.more {
-						font-size:9px;
+						font-size:10px;
 						padding:1px 4px;
 					}
 				}
@@ -47,7 +41,7 @@
 				header {
 					h1 {
 						.reset-dimensions;
-						font-size:19px;
+						font-size:@medium;
 						margin-top:3px;
 					}
 				}
@@ -79,8 +73,7 @@
 					.reset-dimensions;
 					h1 {
 						.reset-dimensions;
-						font-size: 13px;
-						line-height:(@row-height*2);
+						.font-size-small;
 						font-weight:bold;
 						a { text-decoration:none; }
 					}
@@ -89,7 +82,7 @@
 				section  {
 					margin-top:5px;
 					font-family:@serif;
-					font-size: 13px;
+					.font-size-small;
 					p {
 					
 						padding-bottom:0;
@@ -122,8 +115,7 @@
 					.reset-dimensions;
 					h1 {
 						.reset-dimensions;
-						font-size: 13px;
-						line-height:(@row-height*2);
+						.font-size-small;
 						font-weight:bold;
 						a { text-decoration:none; }
 					}
@@ -132,7 +124,7 @@
 				section  {
 					margin-top:5px;
 					font-family:@serif;
-					font-size: 13px;
+					.font-size-small;
 					p {
 					
 						padding-bottom:0;
@@ -148,17 +140,7 @@
 				.drop-shadow(0px, 2px, 7px, rgba(158, 136, 134,0.6));
 			}
 			
-		}
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
+		}	
 	
 		#content_primary, #content_secondary, #content_tertiary {
 			margin-bottom:@row-height;
@@ -183,7 +165,7 @@
 				header {
 					h1 {
 						.reset-dimensions;
-						font-size:19px;
+						font-size:@medium;
 						margin-top:3px;
 					}
 				}
@@ -215,8 +197,7 @@
 					.reset-dimensions;
 					h1 {
 						.reset-dimensions;
-						font-size: 13px;
-						line-height:(@row-height*2);
+						.font-size-small;
 						font-weight:bold;
 						a { text-decoration:none; }
 					}
@@ -225,7 +206,7 @@
 				section  {
 					margin-top:5px;
 					font-family:@serif;
-					font-size: 13px;
+					.font-size-small;
 					p {
 					
 						padding-bottom:0;
