--- a/stylesheets/less/forms.less
+++ b/stylesheets/less/forms.less
@@ -1,15 +1,14 @@
 @import "variables";
 @media screen, projection {
 	input[type=text], textarea {
-		font-size:@x-small;
+		.font-size-small;
 		border: 1px solid @color_midtone;
 		font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif;
 		color: @color_midtone;
 	}
 
 	input[type=submit] {
-		font-size:@x-small;
-		background:none;
+		.font-size-small;
 		border:0;
 		padding:6px 10px 6px 10px;
 		cursor: pointer;
