--- a/stylesheets/less/index.less
+++ b/stylesheets/less/index.less
@@ -95,7 +95,7 @@
 			}
 			
 			img {
-				.drop-shadow(0px, 2px, 7px, rgba(158, 136, 134,0.6));
+				.default-shadow;
 			}
 			
 		}
@@ -137,7 +137,7 @@
 			}
 			
 			img {
-				.drop-shadow(0px, 2px, 7px, rgba(158, 136, 134,0.6));
+				.default-shadow;
 			}
 			
 		}	
@@ -221,7 +221,7 @@
 		
 		#content_secondary {
 			img {
-				.drop-shadow(0px, 2px, 7px, rgba(158, 136, 134,0.6));
+				.default-shadow;
 			}
 		}
 	
