--- a/stylesheets/less/sidebar.less
+++ b/stylesheets/less/sidebar.less
@@ -2,7 +2,8 @@
 
 @media screen, projection {
 	#sidebar {
-		.opacity(.5);
+		margin-top:@row-height*4;
+		.opacity(.75);
 		.columns(3);
 		float:left;
 		h3 {
