--- a/stylesheets/less/sprites.less
+++ b/stylesheets/less/sprites.less
@@ -4,106 +4,147 @@
 	.sprite {
 		display:block;
 	}
-	.sprite.vimeo {
+	.sprite.vimeo-dark-30 {
 		width:30px;
 		height:26px;
-		.sprite-background(0px, -150px);
+		.sprite-background(0px, -90px);
 	}
-	.sprite.twitter {
+	.sprite.twitter-dark-30 {
 		width:23px;
 		height:30px;
-		.sprite-background(-60px, -150px);
+		.sprite-background(-60px, -90px);
 	}
-	.sprite.tumblr {
+	.sprite.tumblr-dark-30 {
 		width:19px;
 		height:30px;
-		.sprite-background(-110px, -150px);
+		.sprite-background(-110px, -90px);
 	}
-	.sprite.facebook {
+	.sprite.facebook-dark-30 {
 		width:14px;
 		height:30px;
-		.sprite-background(-150px, -150px);
+		.sprite-background(-150px, -90px);
 	}
-	.sprite.flickr {
+	.sprite.flickr-dark-30 {
 		width:30px;
 		height:15px;
-		.sprite-background(-190px, -150px);
+		.sprite-background(-190px, -90px);
 	}
-	.sprite.git {
+	.sprite.git-dark-30 {
 		width:28px;
 		height:30px;
-		.sprite-background(-240px, -150px);
+		.sprite-background(-240px, -90px);
 	}
-	.sprite.friendfeed {
+	.sprite.friendfeed-dark-30 {
 		width:28px;
 		height:30px;
-		.sprite-background(-340px, -150px);
-	}
-
-	.sprite.vimeo-light-50 {
-		width:50px;
-		height:43px;
-		.sprite-background(0px, -30px);
-	}
-	.sprite.twitter-light-50 {
-		width:37px;
-		height:50px;
-		.sprite-background(-70px, -30px);
-	}
-	.sprite.tumblr-light-50 {
-		width:31px;
-		height:50px;
-		.sprite-background(-130px, -30px);
-	}
-	.sprite.facebook-light-50 {
-		width:23px;
-		height:50px;
-		.sprite-background(-240px, -30px);
-	}
-	.sprite.flickr-light-50 {
-		width:50px;
-		height:25px;
-		.sprite-background(-180px, -200px);
-	}
-	.sprite.git-light-50 {
-		width:46px;
-		height:50px;
-		.sprite-background(-290px, -200px);
+		.sprite-background(-340px, -90px);
 	}
 
 	.sprite.vimeo-light-30 {
 		width:30px;
 		height:26px;
-		.sprite-background(0px, -100px);
+		.sprite-background(0px, -40px);
 	}
 	.sprite.twitter-light-30 {
 		width:23px;
 		height:30px;
-		.sprite-background(-60px, -100px);
+		.sprite-background(-60px, -40px);
 	}
 	.sprite.tumblr-light-30 {
 		width:19px;
 		height:30px;
-		.sprite-background(-110px, -100px);
+		.sprite-background(-110px, -40px);
 	}
 	.sprite.facebook-light-30 {
 		width:14px;
 		height:30px;
-		.sprite-background(-150px, -100px);
+		.sprite-background(-150px, -40px);
 	}
 	.sprite.flickr-light-30 {
 		width:30px;
 		height:15px;
-		.sprite-background(-190px, -100px);
+		.sprite-background(-190px, -40px);
 	}
 	.sprite.git-light-30 {
 		width:28px;
 		height:30px;
-		.sprite-background(-240px, -100px);
+		.sprite-background(-240px, -40px);
 	}
 	.sprite.rss-light-30 {
 		width:30px;
 		height:30px;
-		.sprite-background(-290px, -100px);
+		.sprite-background(-290px, -40px);
+	}
+	
+	.sprite.vimeo-dark-15 {
+		width:18px;
+		height:15px;
+		.sprite-background(0px, -180px);
+	}
+	.sprite.twitter-dark-15 {
+		width:11px;
+		height:15px;
+		.sprite-background(-60px, -180px);
+	}
+	.sprite.tumblr-dark-15 {
+		width:10px;
+		height:15px;
+		.sprite-background(-110px, -180px);
+	}
+	.sprite.facebook-dark-15 {
+		width:7px;
+		height:15px;
+		.sprite-background(-150px, -180px);
+	}
+	.sprite.flickr-dark-15 {
+		width:15px;
+		height:8px;
+		.sprite-background(-190px, -180px);
+	}
+	.sprite.git-dark-15 {
+		width:14px;
+		height:15px;
+		.sprite-background(-240px, -180px);
+	}
+	.sprite.friendfeed-dark-15 {
+		width:15px;
+		height:15px;
+		.sprite-background(-340px, -180px);
+	}
+
+	.sprite.vimeo-light-15 {
+		width:18px;
+		height:15px;
+		.sprite-background(0px, -140px);
+	}
+	.sprite.twitter-light-15 {
+		width:11px;
+		height:15px;
+		.sprite-background(-60px, -140px);
+	}
+	.sprite.tumblr-light-15 {
+		width:10px;
+		height:15px;
+		.sprite-background(-110px, -140px);
+	}
+	.sprite.facebook-light-15 {
+		width:7px;
+		height:15px;
+		.sprite-background(-150px, -140px);
+	}
+	.sprite.flickr-light-15 {
+		width:15px;
+		height:8px;
+		.sprite-background(-190px, -140px);
+	}
+	.sprite.git-light-15 {
+		width:14px;
+		height:15px;
+		.sprite-background(-240px, -140px);
+	}
+	.sprite.rss-light-15 {
+		width:15px;
+		height:15px;
+		.sprite-background(-290px, -140px);
 	}
 }
