--- a/stylesheets/less/transitions.less
+++ b/stylesheets/less/transitions.less
@@ -1,27 +1,21 @@
-#follow_list {
-	-webkit-transition: all .3s cubic-bezier(0.02, 0, 0.18, 1.0); 
-	-moz-transition: all .3s cubic-bezier(0.02, 0, 0.18, 1.0); 
-	-o-transition: all .3s cubic-bezier(0.02, 0, 0.18, 1.0); 
-}
-
-#work_pullout {
-	-webkit-transition: all .3s cubic-bezier(0.02, 0, 0.18, 1.0); 
-	-moz-transition: all .3s cubic-bezier(0.02, 0, 0.18, 1.0); 
-	-o-transition: all .3s cubic-bezier(0.02, 0, 0.18, 1.0); 
-}
-
 #sidebar {
-	-webkit-transition-property: width, border-left, opacity;
+	-webkit-transition-property: opacity;
 	-webkit-transition-duration: .5s;
 	-webkit-transition-timing-function: cubic-bezier(0.02, 0, 0.18, 1.0);
 
-	-moz-transition-property: width, border-left, opacity;
+	-moz-transition-property: opacity;
 	-moz-transition-duration: .5s;
 	-moz-transition-timing-function: cubic-bezier(0.02, 0, 0.18, 1.0);
 	
-	-o-transition-property: width, border-left, opacity;
+	-o-transition-property: opacity;
 	-o-transition-duration: .5s;
 	-o-transition-timing-function: cubic-bezier(0.02, 0, 0.18, 1.0);
+}
+
+nav li.rss, nav li.twitter {
+	-webkit-transition: background-color .5s cubic-bezier(0.02, 0, 0.18, 1.0); 
+	-moz-transition: background-color .5s cubic-bezier(0.02, 0, 0.18, 1.0); 
+	-o-transition: background-color .5s cubic-bezier(0.02, 0, 0.18, 1.0);
 }
 
 #sticky_footer {
@@ -34,34 +28,4 @@
 		-moz-transition: all .75s cubic-bezier(0.02, 0, 0.18, 1.0); 
 		-o-transition: all .75s cubic-bezier(0.02, 0, 0.18, 1.0);
 	}
-}
-
-#comments_ajax {
-	-webkit-transition: all 1s cubic-bezier(0.02, 0, 0.18, 1.0); 
-	-moz-transition: all 1s cubic-bezier(0.02, 0, 0.18, 1.0);
-	-o-transition: all 1s cubic-bezier(0.02, 0, 0.18, 1.0);
-}
-
-#categories_pullout {
-	-webkit-transition: all .3s cubic-bezier(0.02, 0, 0.18, 1.0); 
-	-moz-transition: all .3s cubic-bezier(0.02, 0, 0.18, 1.0); 
-	-o-transition: all .3s cubic-bezier(0.02, 0, 0.18, 1.0);
-}
-
-#content_aside {
-	-webkit-transition: all .3s cubic-bezier(0.02, 0, 0.18, 1.0); 
-	-moz-transition: all .3s cubic-bezier(0.02, 0, 0.18, 1.0); 
-	-o-transition: all .3s cubic-bezier(0.02, 0, 0.18, 1.0);
-}
-
-#content.home .post footer .metadata {
-	-webkit-transition: all .3s cubic-bezier(0.02, 0, 0.18, 1.0); 
-	-moz-transition: all .3s cubic-bezier(0.02, 0, 0.18, 1.0); 
-	-o-transition: all .3s cubic-bezier(0.02, 0, 0.18, 1.0);
-}
-
-#search_form {
-	-webkit-transition: all .2s cubic-bezier(0.02, 0, 0.18, 1.0); 
-	-moz-transition: all .2s cubic-bezier(0.02, 0, 0.18, 1.0); 
-	-o-transition: all .2s cubic-bezier(0.02, 0, 0.18, 1.0);
 }
