--- a/stylesheets/less/variables.less
+++ b/stylesheets/less/variables.less
@@ -64,6 +64,10 @@
 	line-height:12px;
 }
 
+.default-shadow {
+	.drop-shadow(0px, 0px, 8px, rgba(18, 7, 6,0.25));
+}
+
 @row-height:		15px;
 @column-width:		45px; /*540*/
 @gutter-width:		40px; /*440*/
