--- a/stylesheets/css/grid.css
+++ b/stylesheets/css/grid.css
@@ -5,6 +5,7 @@
 .font-size-small{font-size:13px;line-height:19px;}
 .font-size-x-small{font-size:11px;line-height:14px;}
 .font-size-xx-small{font-size:10px;line-height:12px;}
+.default-shadow{-moz-box-shadow:0px 0px 8px rgba(18, 7, 6, 0.25);-webkit-box-shadow:0px 0px 8px rgba(18, 7, 6, 0.25);box-shadow:0px 0px 8px rgba(18, 7, 6, 0.25);}
 .reset-dimensions{margin:0;padding:0;}
 .incomplete{background-color:rgba(255, 0, 255, 0);}
 .show-bounds{background-color:rgba(255, 255, 0, 0.5);}
